--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "@nextui-org/system": "2.2.5",
     "@nextui-org/theme": "2.2.9",
     "@react-aria/visually-hidden": "3.8.12",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.5",
     "clsx": "2.1.1",
     "framer-motion": "~11.1.1",
